Update meta tags and title for CazeMc

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:image:src" content="">
   <meta property="og:image" content="">
-  <meta name="twitter:title" content="Home - Hypixel">
+  <meta name="twitter:title" content="Home - CazeMc">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/512xnewhypixel.png" type="image/x-icon">
-  <meta name="description" content="This is our official Website for the Minecraft Server Hypixel.net! Join now with 1.8-1.19!">
+  <meta name="description" content="This is our official Website for the Minecraft Server CazeMc.net! Join now with 1.8-1.19!">
   
   
-  <title>Home - Hypixel</title>
+  <title>Home - CazeMc</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
