--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="rules.html">Rules</a>
                     </li></ul>
                 
-                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-primary display-4" href="https://hypixel.net" target="_blank"><span class="mobi-mbri mobi-mbri-shopping-basket mbr-iconfont mbr-iconfont-btn"></span>Store&nbsp;</a></div>
+                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-primary display-4" href="store.html" target="_blank"><span class="mobi-mbri mobi-mbri-shopping-basket mbr-iconfont mbr-iconfont-btn"></span>Store&nbsp;</a></div>
             </div>
         </div>
     </nav>
