Update Twitter meta tags for CazeMC

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   
   <meta name="twitter:card" content="summary_large_image"/>
-  <meta name="twitter:title" content="Hypixel - The Largest Minecraft Minigame Server">
+  <meta name="twitter:title" content="CazeMC - The Largest Minecraft Minigame Server">
   <meta name="twitter:image" content="assets/images/512xnewhypixel.png">
   <meta property="og:image" content="assets/images/512xnewhypixel.png">
-  <meta name="description" content="Join Hypixel, the world's largest Minecraft minigame server! Play Bed Wars, SkyBlock, SkyWars and more. Supports 1.8–1.21+ | hypixel.net">
+  <meta name="description" content="Join CazeMC, the world's largest Minecraft minigame server! Play Bed Wars, SkyBlock, SkyWars and more. Supports 1.8–1.21+ | hypixel.net">
 
   <link rel="shortcut icon" href="assets/images/512xnewhypixel.png" type="image/x-icon">
   <title>Home - Hypixel Network</title>
