--- a/index.html
+++ b/index.html
@@ -87,16 +87,16 @@
   </div>
 </section>
 
-<!-- What is Hypixel -->
+<!-- What is CazeMC -->
 <section class="features12 cid-tjqffd3dFI" id="features13-2">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-12 col-lg-6">
         <div class="card-wrapper">
           <div class="card-box align-left">
-            <h4 class="card-title mbr-fonts-style mb-4 display-2"><strong>What is Hypixel?</strong></h4>
+            <h4 class="card-title mbr-fonts-style mb-4 display-2"><strong>What is CazeMC?</strong></h4>
             <p class="mbr-text mbr-fonts-style display-7">
-              Hypixel is the world’s largest Minecraft server network, home to original and unique games loved by millions. From intense PvP battles in Bed Wars and SkyWars to creative survival in SkyBlock, there’s something for everyone. We support versions 1.8 through 1.21+.
+              CazeMC is the world’s largest Minecraft server network, home to original and unique games loved by millions. From intense PvP battles in Bed Wars and SkyWars to creative survival in SkyBlock, there’s something for everyone. We support versions 1.8 through 1.21+.
             </p>
           </div>
         </div>
