--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="description" content="Join CazeMC, the world's largest Minecraft minigame server! Play Bed Wars, SkyBlock, SkyWars and more. Supports 1.8–1.21+ | hypixel.net">
 
   <link rel="shortcut icon" href="assets/images/512xnewhypixel.png" type="image/x-icon">
-  <title>Home - Hypixel Network</title>
+  <title>Home - CazeMC Network</title>
 
   <!-- Styles -->
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
