--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       </div>
       <div class="col-12 col-md">
         <div class="text-wrapper">
-          <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><strong>Hypixel Network</strong></h1>
+          <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><strong>CazeMC Network</strong></h1>
           <p class="mbr-text mbr-fonts-style display-7">
             The largest and most popular Minecraft minigame server in Minecraft. Featuring original games like Bed Wars, SkyBlock, SkyWars, Duels, Murder Mystery and dozens more — played by millions every month!
           </p>
