Update Twitter and Open Graph image meta tags

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:title" content="CazeMC - The Largest Minecraft Minigame Server">
-  <meta name="twitter:image" content="assets/images/512xnewhypixel.png">
-  <meta property="og:image" content="assets/images/512xnewhypixel.png">
+  <meta name="twitter:image" content="assets/images/cazemc.png">
+  <meta property="og:image" content="assets/images/cazemc.png">
   <meta name="description" content="Join CazeMC, the world's largest Minecraft minigame server! Play Bed Wars, SkyBlock, SkyWars and more. Supports 1.8–1.21+ | hypixel.net">
 
   <link rel="shortcut icon" href="assets/images/512xnewhypixel.png" type="image/x-icon">
