Replace Hypixel logo with CazeMC logo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta property="og:image" content="assets/images/cazemc.png">
   <meta name="description" content="Join CazeMC, the world's largest Minecraft minigame server! Play Bed Wars, SkyBlock, SkyWars and more. Supports 1.8–1.21+ | hypixel.net">
 
-  <link rel="shortcut icon" href="assets/images/512xnewhypixel.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/cazemc.png" type="image/x-icon">
   <title>Home - CazeMC Network</title>
 
   <!-- Styles -->
@@ -39,7 +39,7 @@
     <div class="container-fluid">
       <div class="navbar-brand">
         <span class="navbar-logo">
-          <a href="#"><img src="assets/images/512xnewhypixel.png" alt="Hypixel Logo" style="height: 3rem;"></a>
+          <a href="#"><img src="assets/images/cazemc.png" alt="CazeMC Logo" style="height: 3rem;"></a>
         </span>
         <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-7" href="#">Hypixel.net</a></span>
       </div>
@@ -69,7 +69,7 @@
   <div class="container">
     <div class="row justify-content-center align-items-center">
       <div class="col-12 col-md-6 image-wrapper">
-        <img src="assets/images/512xnewhypixel.png" alt="Hypixel Logo">
+        <img src="assets/images/cazemc.png" alt="CazeMC Logo">
       </div>
       <div class="col-12 col-md">
         <div class="text-wrapper">
@@ -78,7 +78,7 @@
             The largest and most popular Minecraft minigame server in Minecraft. Featuring original games like Bed Wars, SkyBlock, SkyWars, Duels, Murder Mystery and dozens more — played by millions every month!
           </p>
           <div class="mbr-section-btn mt-3">
-            <a class="btn btn-primary display-4" href="https://discord.gg/hypixel" target="_blank">Join Discord</a>
+            <a class="btn btn-primary display-4" href="https://discord.gg/3Rk2c63Qsx" target="_blank">Join Discord</a>
             <a class="btn btn-info-outline display-4" href="https://hypixel.net" target="_blank">Play Now →</a>
           </div>
         </div>
