--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
         <span class="navbar-logo">
           <a href="#"><img src="assets/images/cazemc.png" alt="CazeMC Logo" style="height: 3rem;"></a>
         </span>
-        <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-7" href="#">Hypixel.net</a></span>
+        <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-7" href="#">CazeMC.xyz</a></span>
       </div>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <div class="hamburger"><span></span><span></span><span></span><span></span></div>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav nav-dropdown">
-          <li class="nav-item"><a class="nav-link link text-white display-4" href="#features13-2">What is Hypixel?</a></li>
+          <li class="nav-item"><a class="nav-link link text-white display-4" href="#features13-2">What is CazeMC?</a></li>
           <li class="nav-item"><a class="nav-link link text-white display-4" href="#features24-4">How to Join</a></li>
           <li class="nav-item"><a class="nav-link link text-white display-4" href="https://support.hypixel.net" target="_blank">Support</a></li>
           <li class="nav-item"><a class="nav-link link text-white display-4" href="rules.html">Rules</a></li>
@@ -78,7 +78,7 @@
             The largest and most popular Minecraft minigame server in Minecraft. Featuring original games like Bed Wars, SkyBlock, SkyWars, Duels, Murder Mystery and dozens more — played by millions every month!
           </p>
           <div class="mbr-section-btn mt-3">
-            <a class="btn btn-primary display-4" href="https://discord.gg/3Rk2c63Qsx" target="_blank">Join Discord</a>
+            <a class="btn btn-primary display-4" href="https://discord.gg/6r3qN5KGNk" target="_blank">Join Discord</a>
             <a class="btn btn-info-outline display-4" href="https://hypixel.net" target="_blank">Play Now →</a>
           </div>
         </div>
