Revise index.html for CazeMC Lifesteal Server
Updated various meta tags and content to reflect the CazeMC Lifesteal Server branding.

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   
   <meta name="twitter:card" content="summary_large_image"/>
-  <meta name="twitter:title" content="CazeMC - The Largest Minecraft Minigame Server">
+  <meta name="twitter:title" content="CazeMC - The Minecraft Lifesteal Server">
   <meta name="twitter:image" content="assets/images/cazemc.png">
   <meta property="og:image" content="assets/images/cazemc.png">
-  <meta name="description" content="Join CazeMC, the world's largest Minecraft minigame server! Play Bed Wars, SkyBlock, SkyWars and more. Supports 1.8–1.21+ | hypixel.net">
+  <meta name="description" content="Join CazeMC, The Best Lifesteal Network With Custom Armour And Much More>
 
   <link rel="shortcut icon" href="assets/images/cazemc.png" type="image/x-icon">
   <title>Home - CazeMC Network</title>
@@ -75,11 +75,11 @@
         <div class="text-wrapper">
           <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><strong>CazeMC Network</strong></h1>
           <p class="mbr-text mbr-fonts-style display-7">
-            The largest and most popular Minecraft minigame server in Minecraft. Featuring original games like Bed Wars, SkyBlock, SkyWars, Duels, Murder Mystery and dozens more — played by millions every month!
+            The popular Minecraft Lifesteal Server !
           </p>
           <div class="mbr-section-btn mt-3">
             <a class="btn btn-primary display-4" href="https://discord.gg/6r3qN5KGNk" target="_blank">Join Discord</a>
-            <a class="btn btn-info-outline display-4" href="https://hypixel.net" target="_blank">Play Now →</a>
+            <a class="btn btn-info-outline display-4" href="https://discord.gg/6r3qN5KGNk" target="_blank">Play Now →</a>
           </div>
         </div>
       </div>
@@ -136,7 +136,7 @@
       <div class="col-12">
         <div class="card-wrapper mb-4">
           <div class="card-box align-center">
-            <h4 class="card-title mbr-fonts-style mb-4 display-2"><strong>How to Join Hypixel</strong></h4>
+            <h4 class="card-title mbr-fonts-style mb-4 display-2"><strong>How to Join CazeMC</strong></h4>
             <p class="mbr-text mbr-fonts-style display-7">It takes less than 30 seconds to start playing!</p>
           </div>
         </div>
@@ -155,7 +155,7 @@
           <div class="icon-wrap w-100"><div class="icon-box"><span class="step-number mbr-fonts-style display-5">2</span></div></div>
           <div class="text-box">
             <h4 class="icon-title mbr-black mbr-fonts-style display-7"><strong>Add Server</strong></h4>
-            <p class="mbr-text mbr-black mbr-fonts-style display-4">Click “Add Server” and enter: <strong>hypixel.net</strong></p>
+            <p class="mbr-text mbr-black mbr-fonts-style display-4">Click “Add Server” and enter: <strong>CazeMC.xyz</strong></p>
           </div>
         </div>
       </div>
@@ -180,7 +180,7 @@
         <blockquote>
           <h5 class="mbr-section-title mbr-fonts-style mb-2 display-7"><strong>Our Story</strong></h5>
           <p class="mbr-text mbr-fonts-style display-4">
-            Founded in 2013 by Simon Hypixel and Philippe, Hypixel started as a small adventure-map team and quickly became the biggest Minecraft server in the world. Today, over 100,000 players connect daily to enjoy original games created with love and passion. Thank you for being part of our journey!
+            Founded In 2025 By A Person Called Wang Ling And His Comrades 
           </p>
         </blockquote>
       </div>
@@ -195,7 +195,7 @@
     <div class="row justify-content-center">
       <div class="col-12 col-lg-8">
         <h3 class="mbr-section-title mb-4 mbr-fonts-style display-1"><strong>Join Our Community on Discord!</strong></h3>
-        <div class="mbr-section-btn"><a class="btn btn-primary display-4" href="https://discord.gg/hypixel" target="_blank">Join Discord Server</a></div>
+        <div class="mbr-section-btn"><a class="btn btn-primary display-4" href="https://discord.gg/6r3qN5KGNk" target="_blank">Join Discord Server</a></div>
       </div>
     </div>
   </div>
@@ -212,10 +212,10 @@
         <div class="accordion" id="bootstrap-accordion_6">
           <div class="card mb-3">
             <div class="card-header">
-              <a class="panel-title collapsed" data-bs-toggle="collapse" href="#collapse1_6"><strong>Is Hypixel free?</strong> <span class="sign mbr-iconfont mbri-arrow-down"></span></a>
+              <a class="panel-title collapsed" data-bs-toggle="collapse" href="#collapse1_6"><strong>Is CazeMC free?</strong> <span class="sign mbr-iconfont mbri-arrow-down"></span></a>
             </div>
             <div id="collapse1_6" class="panel-collapse collapse">
-              <div class="card-body"><p>Yes! You only need a legitimate Minecraft Java Edition account. No payment required to play.</p></div>
+              <div class="card-body"><p>Yes! CazeMC is Free . No payment required to play.</p></div>
             </div>
           </div>
           <div class="card mb-3">
@@ -223,7 +223,7 @@
               <a class="panel-title collapsed" data-bs-toggle="collapse" href="#collapse2_6"><strong>What versions are supported?</strong> <span class="sign mbr-iconfont mbri-arrow-down"></span></a>
             </div>
             <div id="collapse2_6" class="panel-collapse collapse">
-              <div class="card-body"><p>We support Minecraft Java Edition 1.8 through the latest version (1.21+). 1.8.9 is recommended for PvP.</p></div>
+              <div class="card-body"><p>We support Minecraft Java Edition 1.8 through the latest version (1.21+).</p></div>
             </div>
           </div>
           <div class="card mb-3">
@@ -231,7 +231,7 @@
               <a class="panel-title collapsed" data-bs-toggle="collapse" href="#collapse3_6"><strong>Can I play on Bedrock Edition?</strong> <span class="sign mbr-iconfont mbri-arrow-down"></span></a>
             </div>
             <div id="collapse3_6" class="panel-collapse collapse">
-              <div class="card-body"><p>Currently Hypixel only supports Java Edition. We have no plans for Bedrock support at this time.</p></div>
+              <div class="card-body"><p>Yes! CazeMC supports Both Bedrock and Java Edition. </p></div>
             </div>
           </div>
         </div>
@@ -246,7 +246,7 @@
     <div class="row justify-content-center">
       <div class="col-md-12 col-lg-6 my-auto px-4 align-left">
         <p class="mbr-text text-grey mb-0 mbr-fonts-style display-7">
-          © 2025 Hypixel Network. All rights reserved.<br>
+          © 2025 CazeMC Network. All rights reserved.<br>
           <a href="imprint.html" class="text-primary">Imprint</a> | 
           <a href="privacy.html" class="text-primary">Privacy Policy</a> | 
           <a href="tos.html" class="text-primary">Terms of Service</a>
