--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
         <ul class="navbar-nav nav-dropdown">
           <li class="nav-item"><a class="nav-link link text-white display-4" href="#features13-2">What is CazeMC?</a></li>
           <li class="nav-item"><a class="nav-link link text-white display-4" href="#features24-4">How to Join</a></li>
-          <li class="nav-item"><a class="nav-link link text-white display-4" href="https://support.hypixel.net" target="_blank">Support</a></li>
+          <li class="nav-item"><a class="nav-link link text-white display-4" href="https://https://discord.gg/6r3qN5KGNk" target="_blank">Support</a></li>
           <li class="nav-item"><a class="nav-link link text-white display-4" href="rules.html">Rules</a></li>
         </ul>
         <div class="navbar-buttons mbr-section-btn">
-          <a class="btn btn-primary display-4" href="https://store.hypixel.net" target="_blank">
+          <a class="btn btn-primary display-4" href="store.html" target="_blank">
             <span class="mobi-mbri mobi-mbri-shopping-basket mbr-iconfont mbr-iconfont-btn"></span> Store
           </a>
         </div>
