--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <li class="nav-item"><a class="nav-link link text-white display-4" href="rules.html">Rules</a></li>
         </ul>
         <div class="navbar-buttons mbr-section-btn">
-          <a class="btn btn-primary display-4" href="store.html" target="_blank">
+          <a class="btn btn-primary display-4" href="store.html" 
             <span class="mobi-mbri mobi-mbri-shopping-basket mbr-iconfont mbr-iconfont-btn"></span> Store
           </a>
         </div>
