Update background image and meta tags in store.html
Updated the Twitter and Open Graph image meta tags to use a new underwater background image. Revised comments for clarity regarding the background change.

--- a/store.html
+++ b/store.html
@@ -4,11 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
- 
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:title" content="CazeMC Store - Ranks, Coins & More">
-  <meta name="twitter:image" content="assets/images/cazemc.png">
-  <meta property="og:image" content="assets/images/cazemc.png">
+  <meta name="twitter:image" content="assets/images/underwater-bg.jpg">
+  <meta property="og:image" content="assets/images/underwater-bg.jpg">
   <meta name="description" content="Official CazeMC Store - Buy ranks, coins, keys and support the server!">
   <link rel="shortcut icon" href="assets/images/cazemc.png" type="image/x-icon">
   <title>Store - CazeMC Network</title>
@@ -60,13 +59,13 @@
   </nav>
 </section>
 
-<!-- Hero Section - Only wallpaper changed -->
+<!-- Hero Section - Updated with new underwater background -->
 <section class="header14 cid-tjqpRpO1sc mbr-fullscreen mbr-parallax-background" id="header14-d">
   <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(1, 17, 26);"></div>
-  
-  <!-- NEW UNDERWATER BACKGROUND -->
+ 
+  <!-- NEW UNDERWATER BACKGROUND (replaces the old one) -->
   <div style="background-image: url('assets/images/underwater-bg.jpg'); background-size: cover; background-position: center; position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: -1;"></div>
-
+  
   <div class="container">
     <div class="row justify-content-center align-items-center">
       <div class="col-12 col-md-6 image-wrapper">
@@ -102,14 +101,23 @@
           <p class="mbr-text mbr-fonts-style display-4">₹50.00</p>
           <a href="#" class="btn btn-primary display-4">Add to Cart</a>
         </div>
+      </セミ</div>
+      <!-- Add the rest of your rank cards here (MVP, ELITE, etc.) -->
+      <!-- Example placeholder for others:
+      <div class="col-12 col-md-6 col-lg-4">
+        <div class="card-wrapper text-center p-4">
+          <img src="https://via.placeholder.com/150?text=MVP" alt="MVP Rank" class="mb-3">
+          <h5 class="card-title mbr-fonts-style display-5"><strong>MVP Rank</strong></h5>
+          <p class="mbr-text mbr-fonts-style display-4">₹100.00</p>
+          <a href="#" class="btn btn-primary display-4">Add to Cart</a>
+        </div>
       </div>
-      <!-- Repeat for MVP, ELITE, IMMORTAL, CAZER (copy your original cards here) -->
-      <!-- ... -->
+      -->
     </div>
   </div>
 </section>
 
-<!-- Add your Money Packages, Coins & Keys sections here (copy from your old store.html) -->
+<!-- You can add Money Packages, Coins & Keys sections here by copying from your old store.html -->
 
 <!-- Footer (same as homepage) -->
 <section class="footer1 cid-tkbGMWG3Nn" id="footer01-15">
