--- a/store.html
+++ b/store.html
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:title" content="CazeMC Store - Ranks, Coins & More">
-  <meta name="twitter:image" content="assets/images/underwater-bg.jpg">
-  <meta property="og:image" content="assets/images/underwater-bg.jpg">
+  <meta name="twitter:image" content="assets/images/cazemc.png">
+  <meta property="og:image" content="assets/images/cazemc.png">
   <meta name="description" content="Official CazeMC Store - Buy ranks, coins, keys and support the server!">
   <link rel="shortcut icon" href="assets/images/cazemc.png" type="image/x-icon">
   <title>Store - CazeMC Network</title>
-  <!-- Styles -->
+
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -27,148 +27,199 @@
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900&display=swap"></noscript>
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
-
-  <style>
-    .sidebar {
-      background-color: rgba(0, 0, 0, 0.4);
-      min-height: 100vh;
-      padding: 2rem 0;
-    }
-    .sidebar .nav-link {
-      color: #fff;
-      font-size: 1.2rem;
-      padding: 0.8rem 1.5rem;
-      border-radius: 0;
-      transition: background 0.3s;
-    }
-    .sidebar .nav-link:hover,
-    .sidebar .nav-link.active {
-      background-color: rgba(255, 255, 255, 0.2);
-    }
-    .category-section {
-      display: none;
-    }
-    .category-section.active {
-      display: block;
-    }
-    .featured-card {
-      background: rgba(255, 255, 255, 0.15);
-      border-radius: 12px;
-      padding: 1.5rem;
-      text-align: center;
-      transition: transform 0.3s;
-    }
-    .featured-card:hover {
-      transform: translateY(-10px);
-    }
-  </style>
 </head>
 <body>
 
-<!-- Hero Section with Underwater Background -->
-<section class="header14 cid-tjqpRpO1sc mbr-fullscreen mbr-parallax-background" id="header14-d">
+<!-- Navigation (same as your homepage) -->
+<section class="menu menu2 cid-tkbL8n4vab" id="menu2-16">
+  <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
+    <div class="container-fluid">
+      <div class="navbar-brand">
+        <span class="navbar-logo">
+          <a href="index.html"><img src="assets/images/cazemc.png" alt="CazeMC Logo" style="height: 3rem;"></a>
+        </span>
+        <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-7" href="index.html">CazeMC.xyz</a></span>
+      </div>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <div class="hamburger"><span></span><span></span><span></span><span></span></div>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav nav-dropdown">
+          <li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#features13-2">What is CazeMC?</a></li>
+          <li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#features24-4">How to Join</a></li>
+          <li class="nav-item"><a class="nav-link link text-white display-4" href="https://discord.gg/6r3qN5KGNk" target="_blank">Support</a></li>
+          <li class="nav-item"><a class="nav-link link text-white display-4" href="rules.html">Rules</a></li>
+        </ul>
+        <div class="navbar-buttons mbr-section-btn">
+          <a class="btn btn-primary display-4" href="store.html">
+            <span class="mobi-mbri mobi-mbri-shopping-basket mbr-iconfont mbr-iconfont-btn"></span> Store
+          </a>
+        </div>
+      </div>
+    </div>
+  </nav>
+</section>
+
+<!-- Hero Banner -->
+<section class="header14 cid-storehero mbr-fullscreen mbr-parallax-background">
   <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(1, 17, 26);"></div>
-  <div style="background-image: url('assets/images/underwater-bg.jpg'); background-size: cover; background-position: center; position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: -1;"></div>
-  
-  <div class="container pt-5">
-    <div class="row justify-content-center">
-      <div class="col-12 text-center">
-        <img src="assets/images/cazemc.png" alt="CazeMC Logo" class="img-fluid" style="max-height: 120px;">
-        <h1 class="mbr-section-title mbr-fonts-style display-1 text-white mt-3"><strong>CazeMC Store</strong></h1>
-        <p class="mbr-text mbr-fonts-style display-7 text-white">
-          Support the server and unlock exclusive ranks, coins, keys & more!
-        </p>
-        <a class="btn btn-primary display-4 mt-3" href="https://discord.gg/6r3qN5KGNk" target="_blank">Join Discord</a>
+  <div class="container">
+    <div class="row justify-content-center align-items-center">
+      <div class="col-12 col-md-6 image-wrapper">
+        <img src="assets/images/cazemc.png" alt="CazeMC Store">
+      </div>
+      <div class="col-12 col-md">
+        <div class="text-wrapper">
+          <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><strong>CazeMC Store</strong></h1>
+          <p class="mbr-text mbr-fonts-style display-7">
+            Support the server and unlock exclusive ranks, coins, keys & more!
+          </p>
+          <div class="mbr-section-btn mt-3">
+            <a class="btn btn-primary display-4" href="https://discord.gg/6r3qN5KGNk" target="_blank">Join Discord</a>
+          </div>
+        </div>
       </div>
     </div>
   </div>
 </section>
 
-<!-- Main Store Content with Sidebar -->
-<div class="container-fluid">
-  <div class="row">
-    <!-- Sidebar -->
-    <div class="col-lg-3 col-xl-2 sidebar">
-      <h4 class="text-white text-center mb-4">Categories</h4>
-      <div class="nav flex-column nav-pills">
-        <a class="nav-link active" href="#featured" data-category="featured">Featured</a>
-        <a class="nav-link" href="#ranks" data-category="ranks">Ranks</a>
-        <a class="nav-link" href="#coins" data-category="coins">Coins</a>
-        <a class="nav-link" href="#keys" data-category="keys">Crate Keys</a>
-        <a class="nav-link" href="#queue" data-category="queue">Queue Priority</a>
-        <a class="nav-link" href="#about" data-category="about">About</a>
-      </div>
+<!-- Ranks Section -->
+<section class="gallery3 cid-store-ranks" id="gallery3-1">
+  <div class="container">
+    <div class="mbr-section-head">
+      <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2"><strong>Ranks</strong></h3>
+      <p class="mbr-text mbr-fonts-style align-center mt-2 display-7">Permanent ranks with awesome perks</p>
     </div>
-
-    <!-- Main Content -->
-    <div class="col-lg-9 col-xl-10 py-5">
-      <!-- Featured Packages -->
-      <div id="featured" class="category-section active">
-        <h2 class="display-5 text-center mb-5"><strong>Featured Packages</strong></h2>
-        <div class="row g-4 justify-content-center">
-          <div class="col-md-4">
-            <div class="featured-card text-white">
-              <img src="https://via.placeholder.com/150/E91E63/FFFFFF?text=CAZER" alt="CAZER Rank" class="mb-3">
-              <h5>CAZER Rank</h5>
-              <p class="display-6">₹999.00</p>
-              <a href="#" class="btn btn-danger">Buy Now</a>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="featured-card text-white">
-              <img src="https://via.placeholder.com/150/9C27B0/FFFFFF?text=Legend+Pack" alt="Legend Pack" class="mb-3">
-              <h5>Legend Coin Pack</h5>
-              <p class="display-6">₹449.00</p>
-              <a href="#" class="btn btn-primary">Buy Now</a>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="featured-card text-white">
-              <img src="https://via.placeholder.com/150/E91E63/FFFFFF?text=Legendary+Key" alt="Legendary Key" class="mb-3">
-              <h5>Legendary Key</h5>
-              <p class="display-6">₹199.00</p>
-              <a href="#" class="btn btn-danger">Buy Now</a>
-            </div>
-          </div>
+    <div class="row mt-5 g-4">
+      <div class="col-12 col-md-6 col-lg-4">
+        <div class="card-wrapper text-center p-4">
+          <img src="https://via.placeholder.com/150?text=VIP" alt="VIP Rank" class="mb-3">
+          <h5 class="card-title mbr-fonts-style display-5"><strong>VIP Rank</strong></h5>
+          <p class="mbr-text mbr-fonts-style display-4">₹50.00</p>
+          <a href="#" class="btn btn-primary display-4">Add to Cart</a>
         </div>
       </div>
-
-      <!-- Ranks Section -->
-      <div id="ranks" class="category-section">
-        <h2 class="display-5 text-center mb-5"><strong>Ranks</strong></h2>
-        <!-- Same rank cards as before -->
-        <div class="row g-4">
-          <div class="col-md-4">
-            <div class="card text-center bg-dark text-white border-0 shadow">
-              <div class="card-body">
-                <img src="https://via.placeholder.com/150/4CAF50/FFFFFF?text=VIP" class="rounded-circle mb-3">
-                <h5>VIP Rank</h5>
-                <p class="display-6 text-success">₹99.00</p>
-                <a href="#" class="btn btn-success">Add to Cart</a>
-              </div>
-            </div>
-          </div>
-          <!-- Add other ranks similarly -->
+      <div class="col-12 col-md-6 col-lg-4">
+        <div class="card-wrapper text-center p-4">
+          <img src="https://via.placeholder.com/150?text=MVP" alt="MVP Rank" class="mb-3">
+          <h5 class="card-title mbr-fonts-style display-5"><strong>MVP Rank</strong></h5>
+          <p class="mbr-text mbr-fonts-style display-4">₹100.00</p>
+          <a href="#" class="btn btn-primary display-4">Add to Cart</a>
         </div>
       </div>
-
-      <!-- Coins, Keys, etc. sections follow the same pattern -->
-      <!-- (Copy the previous sections and wrap them in divs with correct IDs) -->
-
-      <!-- About Section -->
-      <div id="about" class="category-section">
-        <h2 class="display-5 text-center mb-5"><strong>About the Store</strong></h2>
-        <div class="text-center text-white">
-          <p class="lead">Welcome to the official CazeMC Store!</p>
-          <p>All purchases support the server and help us keep improving the experience for everyone.</p>
-          <p>Need help? Join our <a href="https://discord.gg/6r3qN5KGNk" class="text-primary">Discord</a> for support.</p>
+      <div class="col-12 col-md-6 col-lg-4">
+        <div class="card-wrapper text-center p-4">
+          <img src="https://via.placeholder.com/150?text=ELITE" alt="ELITE Rank" class="mb-3">
+          <h5 class="card-title mbr-fonts-style display-5"><strong>ELITE Rank</strong></h5>
+          <p class="mbr-text mbr-fonts-style display-4">₹150.00</p>
+          <a href="#" class="btn btn-primary display-4">Add to Cart</a>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4">
+        <div class="card-wrapper text-center p-4">
+          <img src="https://via.placeholder.com/150?text=IMMORTAL" alt="IMMORTAL Rank" class="mb-3">
+          <h5 class="card-title mbr-fonts-style display-5"><strong>IMMORTAL Rank</strong></h5>
+          <p class="mbr-text mbr-fonts-style display-4">₹200.00</p>
+          <a href="#" class="btn btn-primary display-4">Add to Cart</a>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4">
+        <div class="card-wrapper text-center p-4">
+          <img src="https://via.placeholder.com/150?text=CAZER" alt="CAZER Rank" class="mb-3">
+          <h5 class="card-title mbr-fonts-style display-5"><strong>CAZER Rank</strong></h5>
+          <p class="mbr-text mbr-fonts-style display-4">₹250.00</p>
+          <a href="#" class="btn btn-primary display-4">Add to Cart</a>
         </div>
       </div>
     </div>
   </div>
-</div>
+</section>
 
-<!-- Footer -->
+<!-- Money Packages -->
+<section class="gallery3 cid-store-money" id="gallery3-2">
+  <div class="container">
+    <div class="mbr-section-head">
+      <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2"><strong>In-Game Money</strong></h3>
+    </div>
+    <div class="row mt-5 g-4">
+      <div class="col-12 col-md-6 col-lg-3">
+        <div class="card-wrapper text-center p-4">
+          <img src="https://via.placeholder.com/120?text=1M" alt="1 Million" class="mb-3">
+          <h5 class="card-title mbr-fonts-style display-5">1 Million</h5>
+          <p class="mbr-text mbr-fonts-style display-4">₹40.00</p>
+          <a href="#" class="btn btn-primary display-4">Add</a>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-3">
+        <div class="card-wrapper text-center p-4">
+          <img src="https://via.placeholder.com/120?text=2M" alt="2 Million" class="mb-3">
+          <h5 class="card-title mbr-fonts-style display-5">2 Million</h5>
+          <p class="mbr-text mbr-fonts-style display-4">₹85.00</p>
+          <a href="#" class="btn btn-primary display-4">Add</a>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-3">
+        <div class="card-wrapper text-center p-4">
+          <img src="https://via.placeholder.com/120?text=4M" alt="4 Million" class="mb-3">
+          <h5 class="card-title mbr-fonts-style display-5">4 Million</h5>
+          <p class="mbr-text mbr-fonts-style display-4">₹160.00</p>
+          <a href="#" class="btn btn-primary display-4">Add</a>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-3">
+        <div class="card-wrapper text-center p-4">
+          <img src="https://via.placeholder.com/120?text=8M" alt="8 Million" class="mb-3">
+          <h5 class="card-title mbr-fonts-style display-5">8 Million</h5>
+          <p class="mbr-text mbr-fonts-style display-4">₹300.00</p>
+          <a href="#" class="btn btn-primary display-4">Add</a>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-3 offset-lg-3">
+        <div class="card-wrapper text-center p-4">
+          <img src="https://via.placeholder.com/120?text=16M" alt="16 Million" class="mb-3">
+          <h5 class="card-title mbr-fonts-style display-5">16 Million</h5>
+          <p class="mbr-text mbr-fonts-style display-4">₹580.00</p>
+          <a href="#" class="btn btn-primary display-4">Add</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Coins & Keys -->
+<section class="gallery3 cid-store-coinskeys" id="gallery3-3">
+  <div class="container">
+    <div class="row">
+      <div class="col-12 col-lg-6">
+        <div class="mbr-section-head">
+          <h3 class="mbr-section-title mbr-fonts-style mb-0 display-2"><strong>Coins</strong></h3>
+        </div>
+        <div class="row mt-4 g-4">
+          <div class="col-12 col-md-6"><div class="card-wrapper text-center p-4"><img src="https://via.placeholder.com/100?text=100" class="mb-3"><h5>100 Coins</h5><p>₹20.00</p><a href="#" class="btn btn-primary">Add</a></div></div>
+          <div class="col-12 col-md-6"><div class="card-wrapper text-center p-4"><img src="https://via.placeholder.com/100?text=500" class="mb-3"><h5>500 Coins</h5><p>₹40.00</p><a href="#" class="btn btn-primary">Add</a></div></div>
+          <div class="col-12 col-md-6"><div class="card-wrapper text-center p-4"><img src="https://via.placeholder.com/100?text=1000" class="mb-3"><h5>1000 Coins</h5><p>₹90.00</p><a href="#" class="btn btn-primary">Add</a></div></div>
+          <div class="col-12 col-md-6"><div class="card-wrapper text-center p-4"><img src="https://via.placeholder.com/100?text=1500" class="mb-3"><h5>1500 Coins</h5><p>₹130.00</p><a href="#" class="btn btn-primary">Add</a></div></div>
+          <div class="col-12 col-md-6 offset-md-3"><div class="card-wrapper text-center p-4"><img src="https://via.placeholder.com/100?text=2000" class="mb-3"><h5>2000 Coins</h5><p>₹180.00</p><a href="#" class="btn btn-primary">Add</a></div></div>
+        </div>
+      </div>
+
+      <div class="col-12 col-lg-6 mt-5 mt-lg-0">
+        <div class="mbr-section-head">
+          <h3 class="mbr-section-title mbr-fonts-style mb-0 display-2"><strong>Crate Keys (Free)</strong></h3>
+        </div>
+        <div class="row mt-4 g-4">
+          <div class="col-12 col-md-6"><div class="card-wrapper text-center p-4"><img src="https://via.placeholder.com/100?text=Key+1" class="mb-3"><h5>1 Key</h5><p>Free</p><a href="#" class="btn btn-success">Add</a></div></div>
+          <div class="col-12 col-md-6"><div class="card-wrapper text-center p-4"><img src="https://via.placeholder.com/100?text=Key+2" class="mb-3"><h5>2 Keys</h5><p>Free</p><a href="#" class="btn btn-success">Add</a></div></div>
+          <div class="col-12 col-md-6"><div class="card-wrapper text-center p-4"><img src="https://via.placeholder.com/100?text=Key+3" class="mb-3"><h5>3 Keys</h5><p>Free</p><a href="#" class="btn btn-success">Add</a></div></div>
+          <div class="col-12 col-md-6"><div class="card-wrapper text-center p-4"><img src="https://via.placeholder.com/100?text=Key+4" class="mb-3"><h5>4 Keys</h5><p>Free</p><a href="#" class="btn btn-success">Add</a></div></div>
+          <div class="col-12 col-md-6 offset-md-3"><div class="card-wrapper text-center p-4"><img src="https://via.placeholder.com/100?text=Key+5" class="mb-3"><h5>5 Keys</h5><p>Free</p><a href="#" class="btn btn-success">Add</a></div></div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Footer (same as homepage) -->
 <section class="footer1 cid-tkbGMWG3Nn" id="footer01-15">
   <div class="container">
     <div class="row justify-content-center">
@@ -189,25 +240,10 @@
   </div>
 </section>
 
-<!-- Scripts -->
 <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="assets/parallax/jarallax.js"></script>
 <script src="assets/smoothscroll/smooth-scroll.js"></script>
 <script src="assets/dropdown/js/navbar-dropdown.js"></script>
 <script src="assets/theme/js/script.js"></script>
-
-<script>
-  document.querySelectorAll('.sidebar .nav-link').forEach(link => {
-    link.addEventListener('click', function(e) {
-      e.preventDefault();
-      document.querySelectorAll('.sidebar .nav-link').forEach(l => l.classList.remove('active'));
-      this.classList.add('active');
-      
-      const category = this.getAttribute('data-category');
-      document.querySelectorAll('.category-section').forEach(sec => sec.classList.remove('active'));
-      document.getElementById(category).classList.add('active');
-    });
-  });
-</script>
 </body>
 </html>
