--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<! DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -6,11 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   
   <meta name="twitter:card" content="summary_large_image"/>
-  <meta name="twitter:title" content="CazeMC - The Minecraft Lifesteal Server">
-  <meta name="twitter:image" content="assets/images/cazemc.png">
+  <meta name="twitter: title" content="CazeMC - The Minecraft Lifesteal Server">
+  <meta name="twitter: image" content="assets/images/cazemc. png">
   <meta property="og:image" content="assets/images/cazemc.png">
-  <meta name="description" content="Join CazeMC, The Best Lifesteal Network With Custom Armour And Much More>
-
+  <meta name="description" content="Join CazeMC, The Best Lifesteal Network With Custom Armour And Much More">
   <link rel="shortcut icon" href="assets/images/cazemc.png" type="image/x-icon">
   <title>Home - CazeMC Network</title>
 
@@ -25,11 +24,105 @@
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
-  <link rel="preload" href="https://fonts.googleapis.com/css?family=Fredoka+One:400&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <link rel="preload" href="https://fonts.googleapis.com/css? family=Fredoka+One: 400&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredoka+One:400&display=swap"></noscript>
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900&display=swap"></noscript>
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
+
+  <style>
+    /* Stats Bar Styling (BattlePie Style) */
+    .stats-bar {
+      background: linear-gradient(135deg, rgba(24, 19, 44, 0.95) 0%, rgba(40, 30, 70, 0.95) 100%);
+      padding: 25px 20px;
+      display: flex;
+      justify-content: center;
+      gap: 80px;
+      font-family: 'Fredoka One', cursive, sans-serif;
+      border-bottom: 3px solid #ffc107;
+      border-top: 3px solid #ffc107;
+      flex-wrap: wrap;
+    }
+
+    .stat-col {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 6px;
+      color: #fff;
+      min-width: 140px;
+    }
+
+    . stat-num {
+      font-size: 2.8rem;
+      font-weight:  bold;
+      color: #ffc107;
+      text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6);
+      margin-bottom: 4px;
+      letter-spacing: 1px;
+      transition: all 0.3s ease;
+    }
+
+    .stat-num: hover {
+      transform: scale(1.05);
+      color: #ffdb4d;
+    }
+
+    .stat-label {
+      font-size: 1.15rem;
+      font-weight:  bold;
+      color: #ffc107;
+      margin-bottom: 2px;
+      letter-spacing: 0.5px;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+    }
+
+    . stat-icon {
+      font-size: 1.5rem;
+      color: white;
+      filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0.7));
+    }
+
+    .stat-info {
+      font-size: 0.95rem;
+      color: #bbb;
+      margin:  0;
+      letter-spacing: 1px;
+      text-transform: uppercase;
+      font-weight: 600;
+    }
+
+    . loading-pulse {
+      animation:  pulse 1.2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+    }
+
+    @keyframes pulse {
+      0%, 100% { opacity: 1; }
+      50% { opacity: 0.6; }
+    }
+
+    @media (max-width: 768px) {
+      .stats-bar {
+        flex-direction:  column;
+        gap: 20px;
+        padding: 15px 10px;
+      }
+      
+      .stat-num {
+        font-size: 2.2rem;
+      }
+
+      .stat-label {
+        font-size: 1rem;
+      }
+
+      .stat-info {
+        font-size: 0.85rem;
+      }
+    }
+  </style>
 </head>
 <body>
 
@@ -39,9 +132,9 @@
     <div class="container-fluid">
       <div class="navbar-brand">
         <span class="navbar-logo">
-          <a href="#"><img src="assets/images/cazemc.png" alt="CazeMC Logo" style="height: 3rem;"></a>
+          <a href="#"><img src="assets/images/cazemc. png" alt="CazeMC Logo" style="height: 3rem;"></a>
         </span>
-        <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-7" href="#">CazeMC.xyz</a></span>
+        <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-7" href="#">CazeMC. xyz</a></span>
       </div>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <div class="hamburger"><span></span><span></span><span></span><span></span></div>
@@ -50,11 +143,11 @@
         <ul class="navbar-nav nav-dropdown">
           <li class="nav-item"><a class="nav-link link text-white display-4" href="#features13-2">What is CazeMC?</a></li>
           <li class="nav-item"><a class="nav-link link text-white display-4" href="#features24-4">How to Join</a></li>
-          <li class="nav-item"><a class="nav-link link text-white display-4" href="https://https://discord.gg/6r3qN5KGNk" target="_blank">Support</a></li>
+          <li class="nav-item"><a class="nav-link link text-white display-4" href="https://discord. gg/6r3qN5KGNk" target="_blank">Support</a></li>
           <li class="nav-item"><a class="nav-link link text-white display-4" href="rules.html">Rules</a></li>
         </ul>
         <div class="navbar-buttons mbr-section-btn">
-          <a class="btn btn-primary display-4" href="store.html" 
+          <a class="btn btn-primary display-4" href="store.html">
             <span class="mobi-mbri mobi-mbri-shopping-basket mbr-iconfont mbr-iconfont-btn"></span> Store
           </a>
         </div>
@@ -62,6 +155,24 @@
     </div>
   </nav>
 </section>
+
+<!-- Real-time Stats Bar -->
+<div class="stats-bar">
+  <div class="stat-col">
+    <div class="stat-num loading-pulse" id="mcCount">--</div>
+    <span class="stat-label">
+      <span class="stat-icon">⛏️</span>CazeMC.xyz
+    </span>
+    <span class="stat-info">Players Online</span>
+  </div>
+  <div class="stat-col">
+    <div class="stat-num loading-pulse" id="dcCount">--</div>
+    <span class="stat-label">
+      <span class="stat-icon">💬</span>Discord Server
+    </span>
+    <span class="stat-info">Members</span>
+  </div>
+</div>
 
 <!-- Hero Section -->
 <section class="header14 cid-tjqpRpO1sc mbr-fullscreen mbr-parallax-background" id="header14-d">
@@ -75,7 +186,7 @@
         <div class="text-wrapper">
           <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><strong>CazeMC Network</strong></h1>
           <p class="mbr-text mbr-fonts-style display-7">
-            The popular Minecraft Lifesteal Server !
+            The popular Minecraft Lifesteal Server! 
           </p>
           <div class="mbr-section-btn mt-3">
             <a class="btn btn-primary display-4" href="https://discord.gg/6r3qN5KGNk" target="_blank">Join Discord</a>
@@ -96,7 +207,7 @@
           <div class="card-box align-left">
             <h4 class="card-title mbr-fonts-style mb-4 display-2"><strong>What is CazeMC?</strong></h4>
             <p class="mbr-text mbr-fonts-style display-7">
-              CazeMC is the world’s largest Minecraft server network, home to original and unique games loved by millions. From intense PvP battles in Bed Wars and SkyWars to creative survival in SkyBlock, there’s something for everyone. We support versions 1.8 through 1.21+.
+              CazeMC is the world's largest Minecraft server network, home to original and unique games loved by millions.  From intense PvP battles in Bed Wars and SkyWars to creative survival in Skyblock and more! 
             </p>
           </div>
         </div>
@@ -130,7 +241,7 @@
 
 <!-- How to Join -->
 <section class="features23 cid-tjqfAD0JSA" id="features24-4">
-  <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(1, 17, 26);"></div>
+  <div class="mbr-overlay" style="opacity:  0.7; background-color: rgb(1, 17, 26);"></div>
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-12">
@@ -146,7 +257,7 @@
           <div class="icon-wrap w-100"><div class="icon-box"><span class="step-number mbr-fonts-style display-5">1</span></div></div>
           <div class="text-box">
             <h4 class="icon-title mbr-black mbr-fonts-style display-7"><strong>Open Minecraft</strong></h4>
-            <p class="mbr-text mbr-black mbr-fonts-style display-4">Launch Minecraft Java Edition → Multiplayer.</p>
+            <p class="mbr-text mbr-black mbr-fonts-style display-4">Launch Minecraft Java Edition → Multiplayer. </p>
           </div>
         </div>
       </div>
@@ -155,7 +266,7 @@
           <div class="icon-wrap w-100"><div class="icon-box"><span class="step-number mbr-fonts-style display-5">2</span></div></div>
           <div class="text-box">
             <h4 class="icon-title mbr-black mbr-fonts-style display-7"><strong>Add Server</strong></h4>
-            <p class="mbr-text mbr-black mbr-fonts-style display-4">Click “Add Server” and enter: <strong>CazeMC.xyz</strong></p>
+            <p class="mbr-text mbr-black mbr-fonts-style display-4">Click "Add Server" and enter:  <strong>CazeMC.xyz</strong></p>
           </div>
         </div>
       </div>
@@ -163,7 +274,7 @@
         <div class="item mbr-flex p-4">
           <div class="icon-wrap w-100"><div class="icon-box"><span class="step-number mbr-fonts-style display-5">3</span></div></div>
           <div class="text-box">
-            <h4 class="icon-title mbr-black mbr-fonts-style display-7"><strong>Play!</strong></h4>
+            <h4 class="icon-title mbr-black mbr-fonts-style display-7"><strong>Play! </strong></h4>
             <p class="mbr-text mbr-black mbr-fonts-style display-4">Double-click the server and enjoy thousands of players online!</p>
           </div>
         </div>
@@ -190,7 +301,7 @@
 
 <!-- Discord Call to Action -->
 <section class="info1 cid-tjqN7jdkCu" id="info1-11">
-  <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(1, 17, 26);"></div>
+  <div class="mbr-overlay" style="opacity:  0.5; background-color: rgb(1, 17, 26);"></div>
   <div class="align-center container">
     <div class="row justify-content-center">
       <div class="col-12 col-lg-8">
@@ -212,10 +323,10 @@
         <div class="accordion" id="bootstrap-accordion_6">
           <div class="card mb-3">
             <div class="card-header">
-              <a class="panel-title collapsed" data-bs-toggle="collapse" href="#collapse1_6"><strong>Is CazeMC free?</strong> <span class="sign mbr-iconfont mbri-arrow-down"></span></a>
+              <a class="panel-title collapsed" data-bs-toggle="collapse" href="#collapse1_6"><strong>Is CazeMC free? </strong> <span class="sign mbr-iconfont mbri-arrow-down"></span></a>
             </div>
             <div id="collapse1_6" class="panel-collapse collapse">
-              <div class="card-body"><p>Yes! CazeMC is Free . No payment required to play.</p></div>
+              <div class="card-body"><p>Yes!  CazeMC is Free.  No payment required to play. </p></div>
             </div>
           </div>
           <div class="card mb-3">
@@ -231,7 +342,7 @@
               <a class="panel-title collapsed" data-bs-toggle="collapse" href="#collapse3_6"><strong>Can I play on Bedrock Edition?</strong> <span class="sign mbr-iconfont mbri-arrow-down"></span></a>
             </div>
             <div id="collapse3_6" class="panel-collapse collapse">
-              <div class="card-body"><p>Yes! CazeMC supports Both Bedrock and Java Edition. </p></div>
+              <div class="card-body"><p>Yes! CazeMC supports Both Bedrock and Java Edition.</p></div>
             </div>
           </div>
         </div>
@@ -246,7 +357,7 @@
     <div class="row justify-content-center">
       <div class="col-md-12 col-lg-6 my-auto px-4 align-left">
         <p class="mbr-text text-grey mb-0 mbr-fonts-style display-7">
-          © 2025 CazeMC Network. All rights reserved.<br>
+          © 2025 CazeMC Network. All rights reserved. <br>
           <a href="imprint.html" class="text-primary">Imprint</a> | 
           <a href="privacy.html" class="text-primary">Privacy Policy</a> | 
           <a href="tos.html" class="text-primary">Terms of Service</a>
@@ -269,6 +380,55 @@
 <script src="assets/smoothscroll/smooth-scroll.js"></script>
 <script src="assets/dropdown/js/navbar-dropdown.js"></script>
 <script src="assets/theme/js/script.js"></script>
+
+<!-- Real-time Stats Script (No Backend Required) -->
+<script>
+  const GUILD_ID = '1418230363754598563'; // Your Discord Server ID
+
+  async function updateOnlineCounts() {
+    // ===== DISCORD MEMBERS (MEE6 API) =====
+    fetch(`https://mee6.xyz/api/guilds/${GUILD_ID}/`)
+      .then(response => response.json())
+      .then(data => {
+        const memberCount = data.guild?. member_count || 0;
+        const dcElement = document.getElementById('dcCount');
+        if (dcElement) {
+          dcElement.textContent = memberCount;
+          dcElement.classList.remove('loading-pulse');
+        }
+        console.log('✅ Discord Members Updated:', memberCount);
+      })
+      .catch(error => {
+        console. error('❌ Discord API Error:', error);
+        document.getElementById('dcCount').textContent = '0';
+      });
+
+    // ===== MINECRAFT PLAYERS (mcsrvstat. us API) =====
+    fetch('https://api.mcsrvstat.us/2/cazemc. xyz')
+      .then(response => response.json())
+      .then(data => {
+        const playerCount = data.players?. online || 0;
+        const mcElement = document.getElementById('mcCount');
+        if (mcElement) {
+          mcElement.textContent = playerCount;
+          mcElement.classList.remove('loading-pulse');
+        }
+        console. log('✅ Minecraft Players Updated:', playerCount);
+      })
+      .catch(error => {
+        console.error('❌ Minecraft API Error:', error);
+        document.getElementById('mcCount').textContent = '0';
+      });
+  }
+
+  // Update on page load
+  document.addEventListener('DOMContentLoaded', () => {
+    updateOnlineCounts();
+    
+    // Refresh every 30 seconds
+    setInterval(updateOnlineCounts, 30000);
+  });
+</script>
 
 </body>
 </html>
